apps/syncthing/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  ports:
    - name: https
      port: 8384
      targetPort: https
