apps/syncthing/components/tls/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
