apps/syncthing/components/tls/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: syncthing
      port:
        name: https
